<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_buscas"
        android:title="@string/menu_buscas"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_config"
        android:title="@string/menu_config"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_escolha"
        android:title="@string/menu_escolha"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sair"
        android:title="@string/menu_sair"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />

</menu>
